--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,5 +2,7 @@
   <button [routerLink]="['/','first']">First component</button>
   <button [routerLink]="['/','second']">Second component</button>
   <button [routerLink]="['/','third']">Third component</button>
+  <button [routerLink]="['/','concatObservables']">Concatenando observables</button>
+  
   <router-outlet></router-outlet>
 </div>
